<resources>
    <string name="app_name">Movesense Showcase App</string>

    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Bluetooth LE scanning requires location permission</string>
    <string name="btn_ok">OK</string>

    <string name="btn_get">Hae akkutiedot</string>
    <string name="linear_acceleration_name">Linear Acceleration</string>
    <string name="angular_velocity_name">Suorita mittaus</string>
    <string name="magnetic_field_name">Magnetic Field</string>
    <string name="heart_rate_name">Heart Rate</string>
    <string name="temperature_name">Temperature</string>
    <string name="led_name">Led</string>
    <string name="multi_subscription_name">Multi Subscription</string>
    <string name="yes">Kyllä</string>
    <string name="no">Ei</string>
    <string name="please_wait">Odota hetki...</string>
    <string name="please_wait_connecting">Yhdistäminen voi kestää 10-30s \n Odota hetki...</string>
    <string name="connecting">Yhdistetään</string>
    <string name="loading_information">Ladataan tietoja...</string>
    <string name="kelvin">kelvin:</string>
    <string name="celsius">celsius:</string>
    <string name="rate">Rate:</string>
    <string name="y">y:</string>
    <string name="x">x:</string>
    <string name="z">z:</string>
    <string name="subscribe">Subscribe</string>
    <string name="test_magnetic_field">Test: Magnetic Field</string>
    <string name="test_heart_rate">Test: Heart Rate</string>
    <string name="value">Value:</string>
    <string name="test_led">Test: Led</string>
    <string name="off_on">OFF / ON</string>
    <string name="response">Response:</string>
    <string name="waiting_for_action">Waiting for action</string>
    <string name="test_linear_acceleration">Test: Linear Acceleration</string>
    <string name="test_multi_subscription">Test: Multi Subscription</string>
    <string name="test_temperature">Test: Temperature</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="write_external_storage_permission_title">Write External Storage Permission</string>
    <string name="write_external_storage_permission_text">Saving files required Write External Storage Permission</string>
    <string name="test_angular_velocity">Mittaus: Angular Velocity</string>
    <string name="no_network_connection_available">No network connection available.</string>
    <string name="log_out_from_drive">Log Out From Drive</string>
    <string name="refresh_files">Refresh Files</string>
    <string name="change_account">Change Account</string>
    <string name="log_in">Log In</string>

    <string name="Movesense">Movesense</string>
    <string name="Saved_Data">Saved Data</string>
    <string name="movesense_device_name">Movesense</string>
    <string name="dfu_device_name">DfuTarg</string>
    <string name="movesense_sw_version">Movesense Sw Version: </string>
    <string name="dfu_zip_sw_version">DFU zip Sw Version: </string>
    <string name="movesense_sw_version_device_must_be_connected">Movesense Sw Version: Device must be connected</string>
    <string name="select_file_and_device">Select File and Device</string>
    <string name="disconnect_dialog_text">Tästä näkymästä poistuminen katkaisee yhteyden laitteeseen ja mittauksen. Haluatko varmasti lähteä?</string>
    <string name="application_version">Application Version: %s</string>
    <string name="library_version">Library Version: %s</string>
    <string name="energy_value_to_low_for_update">Energy value is to low for update</string>
    <string name="ecg">ECG</string>
    <string name="battery_energy">Movesense-anturin akku</string>
    <string name="battery_value">Akku : </string>
    <string name="note_text">Important Note:\n  On some phones Subscripton with rate higher than 104 Hz can cause Bluetooth connection problem and restart app might be required.</string>
    <string name="multisubscribe_note_text">Important Note:\n  On some phones Subscribing 3(and more) sensors can cause Bluetooth connection problem and restart app might be required.</string>
    <string name="app_info_name">App Info</string>
    <string name="exit">Olet katkaisemassa yhteyden</string>
    <string name="imu_name">Imu</string>
    <string name="Memory_Diagnostic">Memory Diagnostic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rr">RR [ms]:</string>
    <string name="bpm">Beat interval [bpm]:</string>
    <string name="heart_rate">Heart rate:</string>
    <string name="beat_interval">Beat interval:</string>
    <string name="info">info</string>
    <string name="etusivu">Etusivu</string>
    <string name="yhdist_anturi">Yhdistä anturi</string>
    <string name="Ohjeet">Ohjeet</string>
    <string name="mittaustulokset">Mittaustulokset</string>
    <string name="uniapnea">Uniapnea</string>
    <string name="lis_tietoa_uniapneasta">Lisätietoa uniapneasta</string>
    <string name="sentraalinen_uniapnea">Sentraalinen uniapnea</string>
    <string name="obstruktiivinen_uniapnea">Obstruktiivinen uniapnea</string>
</resources>
